--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.17.1",
         "install": "^0.13.0",
         "mongoose": "^5.9.9",
+        "socket.io": "^2.3.0",
         "swagger-ui-express": "^4.1.4"
     },
     "devDependencies": {
