Revert "init changes"
This reverts commit 787a8d40e36835b7f59c45dadc29cb24af53d6d8.

--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "teachit-service",
-  "version": "1.0.0",
-  "description": "TeachIT service api",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js"
-  },
-  "author": "Durga Rao Pamarthi",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "install": "^0.13.0",
-    "mongoose": "^5.9.9",
-    "socket.io": "^2.3.0",
-    "swagger-ui-express": "^4.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  }
+    "name": "chit-service",
+    "version": "1.0.0",
+    "description": "Cit service api",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon ./src/server.js"
+    },
+    "author": "Durga Rao Pamarthi",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "install": "^0.13.0",
+        "mongoose": "^5.9.9",
+        "socket.io": "^2.3.0",
+        "swagger-ui-express": "^4.1.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.3"
+    }
 }
